--- a/notebooks/word-vectors.ipynb
+++ b/notebooks/word-vectors.ipynb
@@ -24,6 +24,8 @@
     "current subsampling of inputs is slick, but need to also sample targets\n",
     "- maybe best to do subsampling as a preprocessing step\n",
     "\n",
+    "[binder](http://docs.mybinder.org/release-notes)\n",
+    "\n",
     "### IDEAS:\n",
     "\n",
     "char-RNN for embedding: rather than lookup, embedding vectors are final state of RNN run on words with 1-hot character reps/ or character embeddings from lookup\n",
