change pickle paths to bin/

--- a/notebooks/word-vectors.ipynb
+++ b/notebooks/word-vectors.ipynb
@@ -414,7 +414,7 @@
     "print('fitting Tokenizer...')\n",
     "tok.fit_on_texts(texts)\n",
     "print('saving to disk...')\n",
-    "picklewrite('tokenizer.pickle', tok)\n",
+    "picklewrite('bin/tokenizer.pickle', tok)\n",
     "print('done')"
    ]
   },
@@ -426,7 +426,7 @@
    },
    "outputs": [],
    "source": [
-    "tok = pickleread('tokenizer.pickle')"
+    "tok = pickleread('bin/tokenizer.pickle')"
    ]
   },
   {
@@ -464,7 +464,7 @@
     "seqs = []\n",
     "for t in tqdm(texts):\n",
     "    seqs.append(tok.texts_to_sequences([t])\n",
-    "picklewrite('seqs.pickle', seqs)"
+    "picklewrite('bin/seqs.pickle', seqs)"
    ]
   },
   {
@@ -475,7 +475,7 @@
    },
    "outputs": [],
    "source": [
-    "seqs = pickleread('seqs.pickle')"
+    "seqs = pickleread('bin/seqs.pickle')"
    ]
   },
   {
