move stuff out to utils/libvictor.py

--- a/notebooks/word-vectors.ipynb
+++ b/notebooks/word-vectors.ipynb
@@ -4,9 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://papers.nips.cc/paper/5021-distributed-representations\n",
+    "word2vec: http://papers.nips.cc/paper/5021-distributed-representations\n",
     "\n",
-    "https://www.tensorflow.org/versions/r0.12/tutorials/word2vec/index.html\n",
+    "word2vec tf tutorial: https://www.tensorflow.org/versions/r0.12/tutorials/word2vec/index.html\n",
+    "\n",
+    "skip-thought vectors: https://arxiv.org/abs/1506.06726\n",
+    "- dataset used, BookCorpus, is unfortunately allowed for affiliated academic use only: http://yknzhu.wixsite.com/mbweb\n",
     "\n",
     "### TODO:\n",
     "\n",
@@ -23,29 +26,63 @@
     "\n",
     "current subsampling of inputs is slick, but need to also sample targets\n",
     "- maybe best to do subsampling as a preprocessing step\n",
+    "- another option is to separate by sentence, instead of using a window size. then sample from each sentence conditioned on word frequency in the corpus. No need to distinguish inputs from targets. Could also sample sentences based on length/sum of word weights\n",
     "\n",
     "[binder](http://docs.mybinder.org/release-notes)\n",
     "\n",
     "### IDEAS:\n",
     "\n",
     "char-RNN for embedding: rather than lookup, embedding vectors are final state of RNN run on words with 1-hot character reps/ or character embeddings from lookup\n",
-    "- has it been done?"
+    "- has it been done?\n",
+    "- good: fewer parameters, possibly\n",
+    "- good: generalization to mis/alternate spellings, compound words\n",
+    "- bad: conceptual and computational complexity\n",
+    "- ugly: RNN still doesn't condition on context, doesn't help with polysemy or phrases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../util/')\n",
+    "import libvictor as lv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
     "#python 3\n",
-    "import math\n",
-    "import os\n",
-    "import re\n",
-    "import operator\n",
-    "from bisect import bisect_right\n",
+    "import math, os, re, operator\n",
     "from collections import defaultdict\n",
     "\n",
     "import numpy as np\n",
@@ -69,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +134,7 @@
        "\n",
        "    <div class=\"bk-root\">\n",
        "        <a href=\"http://bokeh.pydata.org\" target=\"_blank\" class=\"bk-logo bk-logo-small bk-logo-notebook\"></a>\n",
-       "        <span id=\"d1706364-0665-45ca-a446-427f9fbec0cb\">Loading BokehJS ...</span>\n",
+       "        <span id=\"25f30a4f-1093-4792-9108-e222725f7322\">Loading BokehJS ...</span>\n",
        "    </div>"
       ]
      },
@@ -145,7 +182,7 @@
        "\n",
        "  function display_loaded() {\n",
        "    if (window.Bokeh !== undefined) {\n",
-       "      Bokeh.$(\"#d1706364-0665-45ca-a446-427f9fbec0cb\").text(\"BokehJS successfully loaded.\");\n",
+       "      Bokeh.$(\"#25f30a4f-1093-4792-9108-e222725f7322\").text(\"BokehJS successfully loaded.\");\n",
        "    } else if (Date.now() < window._bokeh_timeout) {\n",
        "      setTimeout(display_loaded, 100)\n",
        "    }\n",
@@ -187,9 +224,9 @@
        "      console.log(\"Bokeh: injecting script tag for BokehJS library: \", url);\n",
        "      document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
        "    }\n",
-       "  };var element = document.getElementById(\"d1706364-0665-45ca-a446-427f9fbec0cb\");\n",
+       "  };var element = document.getElementById(\"25f30a4f-1093-4792-9108-e222725f7322\");\n",
        "  if (element == null) {\n",
-       "    console.log(\"Bokeh: ERROR: autoload.js configured with elementid 'd1706364-0665-45ca-a446-427f9fbec0cb' but no matching script tag was found. \")\n",
+       "    console.log(\"Bokeh: ERROR: autoload.js configured with elementid '25f30a4f-1093-4792-9108-e222725f7322' but no matching script tag was found. \")\n",
        "    return false;\n",
        "  }\n",
        "\n",
@@ -202,7 +239,7 @@
        "    \n",
        "    function(Bokeh) {\n",
        "      \n",
-       "      Bokeh.$(\"#d1706364-0665-45ca-a446-427f9fbec0cb\").text(\"BokehJS is loading...\");\n",
+       "      Bokeh.$(\"#25f30a4f-1093-4792-9108-e222725f7322\").text(\"BokehJS is loading...\");\n",
        "    },\n",
        "    function(Bokeh) {\n",
        "      console.log(\"Bokeh: injecting CSS: https://cdn.pydata.org/bokeh/release/bokeh-0.12.3.min.css\");\n",
@@ -225,7 +262,7 @@
        "      console.log(\"Bokeh: BokehJS failed to load within specified timeout.\");\n",
        "      window._bokeh_failed_load = true;\n",
        "    } else if (!force) {\n",
-       "      var cell = $(\"#d1706364-0665-45ca-a446-427f9fbec0cb\").parents('.cell').data().cell;\n",
+       "      var cell = $(\"#25f30a4f-1093-4792-9108-e222725f7322\").parents('.cell').data().cell;\n",
        "      cell.output_area.append_execute_result(NB_LOAD_WARNING)\n",
        "    }\n",
        "\n",
@@ -254,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -265,13 +302,13 @@
        "3485"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#text to integers\n",
+    "#text from disk\n",
     "regex = re.compile('\\w*\\.txt')\n",
     "text_dir = '../../../books/feedbooks'\n",
     "text_files = [os.path.join(text_dir, f) for f in os.listdir(text_dir) if regex.match(f)]\n",
@@ -280,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -290,8 +327,7 @@
      "output_type": "stream",
      "text": [
       "—¬–…“”'!\"#$%&()*+,-./:;<=>?@[\\]^_`{|}~\t\n",
-      "\n",
-      " love   l’amour\n"
+      "\n"
      ]
     }
    ],
@@ -299,25 +335,19 @@
     "text_filters = \"—¬–…“”'\"+base_filter()\n",
     "print(text_filters)\n",
     "\n",
-    "def make_filter(re_string, repl_string):\n",
-    "    regex = re.compile(re_string)\n",
-    "    return lambda x: re.sub(regex, repl_string, x)\n",
-    "\n",
-    "def apply_list(x, fns):\n",
-    "    if len(fns)==0:\n",
-    "        return x\n",
-    "    return apply_list(fns[0](x), fns[1:])\n",
-    "\n",
-    "print(apply_list('‘love’:  l’amo-\\nur', text_filter_fns))\n",
+    "# print(apply_list('‘love’:  l’amo-\\nur', text_filter_fns))\n",
     "\n",
     "def process_txt(fname, verbose=False):\n",
-    "    dequote = make_filter(r'‘|’\\W', ' ')\n",
-    "    debreak = make_filter(r'(-|—|–)\\W+', '')\n",
-    "    deess = make_filter(r'(Š|š)', ' ')\n",
-    "    text_filter_fns = [dequote, debreak, deess]\n",
+    "    #get rid of quotes but not contractions\n",
+    "    dequote = lv.make_re_filter(r'‘|’\\W', ' ')\n",
+    "    #repair any words broken across lines that got reified into text\n",
+    "    debreak = lv.make_re_filter(r'(-|—|–)\\W+', '')\n",
+    "    #not sure why Š and š are showing up in whitespace of otherwise utf-8 text\n",
+    "    deess = lv.make_re_filter(r'(Š|š)', ' ')\n",
+    "    filter_fn = lv.compose_list([dequote, debreak, deess])\n",
     "    try:\n",
     "        with open(fname, \"r\", encoding='utf8', errors='ignore') as f: #, errors='ignore'\n",
-    "            string = apply_list(f.read(), text_filter_fns)\n",
+    "            string = filter_fn(f.read())\n",
     "            if 'š' in string:\n",
     "                if verbose: print(fname)\n",
     "            return string\n",
@@ -325,33 +355,22 @@
     "        if verbose: print('{}: falling back to latin_1 encoding'.format(fname))\n",
     "        with open(fname, \"r\", encoding='latin1') as f:\n",
     "            string = f.read()\n",
-    "            string = apply_list(string, text_filter_fns)\n",
+    "            string = filter_fn(string)\n",
     "            return string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "deess = make_filter(r'(Š|š)', ' ')\n",
-    "deess('Chapter 1\\n\\nŠ\\n\\nIn 1892.')\n",
-    "# print(texts2[0][2000:3000])\n",
-    "'lovely' in texts2[0]"
+    "# texts = []\n",
+    "# for fname in tqdm(text_files):\n",
+    "#     texts.append(process_txt(fname, True))\n",
+    "texts = (process_txt(fname) for fname in text_files)"
    ]
   },
   {
@@ -360,52 +379,12 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "texts2 = [process_txt('books/feedbooks/1412.txt', True)]\n",
-    "tok2 = Tokenizer(filters=text_filters)\n",
-    "tok2.fit_on_texts(texts2)\n",
-    "vocab_size2 = max(tok2.word_index.values())+1\n",
-    "print('{} words in vocabulary'.format(vocab_size2))\n",
-    "display_dict2 = {(k,v):tok2.word_counts[k] for k,v in tok2.word_index.items()}\n",
-    "sorted(display_dict2.items(), key=operator.itemgetter(1), reverse=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "texts = []\n",
-    "for fname in tqdm(text_files):\n",
-    "    texts.append(process_txt(fname, True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fitting Tokenizer...\n",
-      "saving to disk...\n",
-      "done\n"
+      "fitting Tokenizer...\n"
      ]
     }
    ],
@@ -486,10 +465,10 @@
    },
    "outputs": [],
    "source": [
-    "def sample_cdf(cdf):\n",
-    "    r = np.random.rand()\n",
-    "    i = bisect_right(cdf, r)\n",
-    "    return i\n",
+    "# def sample_cdf(cdf):\n",
+    "#     r = np.random.rand()\n",
+    "#     i = bisect_right(cdf, r)\n",
+    "#     return i\n",
     "\n",
     "def make_batch_generator(seqs, word_counts, word_index, context_size):\n",
     "    window_size = 2*context_size+1\n",
@@ -527,7 +506,7 @@
     "\n",
     "            # then choose windows from those sequences\n",
     "            if weight_targets_by_frequency:\n",
-    "                window_centers = np.array([sample_cdf(loc_cdfs[i]) for i in seq_idxs])\n",
+    "                window_centers = np.array([lv.sample_cdf(loc_cdfs[i]) for i in seq_idxs])\n",
     "            else:\n",
     "                window_centers = np.array([np.random.choice(\n",
     "                            np.arange(context_size, len(seqs[s_idx])-context_size)\n",
